example/policy/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-label
spec:
  validations:
    - expression: "has(object.metadata.labels)"
      message: "Deployment has to have label"
  failurePolicy: Fail
