example/policy/policy2.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-label
spec:
  validations:
    - expression: "has(object.metadata.labels)"
      message: "Deployment has to have label"
    - expression: "has(object.metadata.namespace)"
      message: "Deployment has to have namespace"
    - expression: "url(object.metadata.labels.host).getHost() == 'www.ub-speeda.com'"
      message: "url label have to be www.ub-speeda.com"
  failurePolicy: Fail
